[package]
name = "fastslam"
version = "0.1.0"
authors = ["sollimann <kristoffer.solberg@cognite.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

#[features]
#display-window = ["sdl2"]

[dependencies]
piston_window = "0.116.0"
image = { version = "0.23.6", default-features = true }
imageproc = { version = "0.22.0", features = ["display-window"] }
rayon = "1.5.0"

[lib]
name = "fastslam"
path = "src/lib.rs"