[package]
name = "fastslam"
version = "0.1.0"
authors = ["sollimann <kristoffer.solberg@cognite.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# graphics
piston_window = "0.119.0"
piston2d-opengl_graphics = "0.78.0"
piston2d-graphics = "0.40.0"


# for importing images
image = { version = "0.23.6", default-features = true }
imageproc = { version = "0.22.0", features = ["display-window"] }

# iterator optimizer
rayon = "1.5.0"

[lib]
name = "fastslam"
path = "src/lib.rs"