[package]
name = "simulator"
version = "0.1.0"
authors = ["sollimann <kristoffer.solberg@cognite.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fastslam = { path = "../fastslam"}
pistoncore-sdl2_window = "0.67.0"
piston = "0.53.0"
piston2d-graphics = "0.40.0"
piston_window = "0.119.0"
piston2d-opengl_graphics = "0.78.0"
svg2polylines = "0.5.2"

[[bin]]
name = "vacuum-robot-simulator"
path = "src/run.rs"